--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "node-cache": "^5.1.2",
     "hubot": "^9.1.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -24,3 +26,5 @@
     "node": ">=18.0.0"
   }
 }
+
+
